--- a/.vercel/project.json
+++ b/.vercel/project.json
@@ -1,7 +1,5 @@
 {
-  "build": {
-    "env": {
-      "NODE_VERSION": "16"
-    }
-  }
+  "buildCommand": "npm run build",
+  "installCommand": "npm install",
+  "nodeVersion": "16.x"
 }
